[package]
name = "quantification_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.24.0", features = [
    "url",
    "rustls-tls-native-roots",
] }
axum = { version = "0.8", features = ["macros"] }
service_utils_rs = { version = "0.3.6", features = ["jwt", "db", "http"] }
surrealdb = { version = "2" }
thiserror = "2"
bcrypt = "0.17"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-axum = { version = "0.2" }
chrono = "0.4"
rust_decimal = "1"
reqwest = "0.12"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
lazy_static = { version = "1.5" }
dotenvy = "0.15"
dotenvy_macro = "0.15"
url = "2.5"
tower-http = { version = "0.6", features = ["cors"] }
